customer-api app

--- a/customer-api/src/main/resources/application.properties
+++ b/customer-api/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.h2.console.path=/h2-console
 # ===============================
 # = Server port (Optional)     =
 # ===============================
-server.port=8081
+#server.port=8081
 
 # ===============================
 # = Logging                    =
