--- a/customer-api/src/k8s/deployment.yaml
+++ b/customer-api/src/k8s/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: customer-api
         image: customer-api:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
         env:
